G32/source/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SALTO_DE_LINEA

Grammar

Rule 0     S' -> sigma
Rule 1     sigma -> program
Rule 2     program -> ACCION IDENTIFICADOR ES environment process FIN_ACCION
Rule 3     program -> comment ACCION IDENTIFICADOR ES environment process FIN_ACCION
Rule 4     program -> ACCION IDENTIFICADOR ES process FIN_ACCION
Rule 5     program -> comment ACCION IDENTIFICADOR ES process FIN_ACCION
Rule 6     process -> PROCESO sentence
Rule 7     process -> PROCESO
Rule 8     comment -> COMENTARIO_ENCABEZADO
Rule 9     comment -> COMENTARIO_BLOQUE
Rule 10    comment -> COMENTARIO_LINEA
Rule 11    environment -> AMBIENTE environmentsentence
Rule 12    environment -> AMBIENTE
Rule 13    environmentsentence -> IDENTIFICADOR DOS_PUNTOS type PUNTO_Y_COMA environmentsentence
Rule 14    environmentsentence -> comment IDENTIFICADOR DOS_PUNTOS type PUNTO_Y_COMA environmentsentence
Rule 15    environmentsentence -> IDENTIFICADOR DOS_PUNTOS type PUNTO_Y_COMA
Rule 16    environmentsentence -> comment IDENTIFICADOR DOS_PUNTOS type PUNTO_Y_COMA
Rule 17    environmentsentence -> IDENTIFICADOR IGUAL CADENA PUNTO_Y_COMA environmentsentence
Rule 18    environmentsentence -> comment IDENTIFICADOR IGUAL CADENA PUNTO_Y_COMA environmentsentence
Rule 19    environmentsentence -> IDENTIFICADOR IGUAL DATO PUNTO_Y_COMA environmentsentence
Rule 20    environmentsentence -> comment IDENTIFICADOR IGUAL DATO PUNTO_Y_COMA environmentsentence
Rule 21    environmentsentence -> IDENTIFICADOR IGUAL CADENA PUNTO_Y_COMA
Rule 22    environmentsentence -> comment IDENTIFICADOR IGUAL CADENA PUNTO_Y_COMA
Rule 23    environmentsentence -> IDENTIFICADOR IGUAL DATO PUNTO_Y_COMA
Rule 24    environmentsentence -> comment IDENTIFICADOR IGUAL DATO PUNTO_Y_COMA
Rule 25    environmentsentence -> IDENTIFICADOR IGUAL NUMERO_ENTERO PUNTO_Y_COMA environmentsentence
Rule 26    environmentsentence -> comment IDENTIFICADOR IGUAL NUMERO_ENTERO PUNTO_Y_COMA environmentsentence
Rule 27    environmentsentence -> IDENTIFICADOR IGUAL NUMERO_ENTERO PUNTO_Y_COMA
Rule 28    environmentsentence -> comment IDENTIFICADOR IGUAL NUMERO_ENTERO PUNTO_Y_COMA
Rule 29    environmentsentence -> IDENTIFICADOR IGUAL NUMERO_REAL PUNTO_Y_COMA environmentsentence
Rule 30    environmentsentence -> comment IDENTIFICADOR IGUAL NUMERO_REAL PUNTO_Y_COMA environmentsentence
Rule 31    environmentsentence -> IDENTIFICADOR IGUAL NUMERO_REAL PUNTO_Y_COMA
Rule 32    environmentsentence -> comment IDENTIFICADOR IGUAL NUMERO_REAL PUNTO_Y_COMA
Rule 33    environmentsentence -> function PUNTO_Y_COMA environmentsentence
Rule 34    environmentsentence -> comment function PUNTO_Y_COMA environmentsentence
Rule 35    environmentsentence -> function PUNTO_Y_COMA
Rule 36    environmentsentence -> comment function PUNTO_Y_COMA
Rule 37    environmentsentence -> procedure PUNTO_Y_COMA environmentsentence
Rule 38    environmentsentence -> comment procedure PUNTO_Y_COMA environmentsentence
Rule 39    environmentsentence -> procedure PUNTO_Y_COMA
Rule 40    environmentsentence -> comment procedure PUNTO_Y_COMA
Rule 41    type -> DATO
Rule 42    function -> FUNCION IDENTIFICADOR PARENTESIS_IZQUIERDA arguments PARENTESIS_DERECHA DOS_PUNTOS type ES environment process FIN_FUNCION PUNTO_Y_COMA
Rule 43    function -> FUNCION IDENTIFICADOR PARENTESIS_IZQUIERDA arguments PARENTESIS_DERECHA DOS_PUNTOS type ES process FIN_FUNCION PUNTO_Y_COMA
Rule 44    procedure -> PROCEDIMIENTO PARENTESIS_IZQUIERDA arguments PARENTESIS_DERECHA ES environment process FIN_PROCEDIMIENTO PUNTO_Y_COMA
Rule 45    procedure -> PROCEDIMIENTO PARENTESIS_IZQUIERDA arguments PARENTESIS_DERECHA ES process FIN_PROCEDIMIENTO PUNTO_Y_COMA
Rule 46    sentence -> write PUNTO_Y_COMA sentence
Rule 47    sentence -> comment write PUNTO_Y_COMA sentence
Rule 48    sentence -> write PUNTO_Y_COMA
Rule 49    sentence -> comment write PUNTO_Y_COMA
Rule 50    sentence -> read PUNTO_Y_COMA sentence
Rule 51    sentence -> comment read PUNTO_Y_COMA sentence
Rule 52    sentence -> read PUNTO_Y_COMA
Rule 53    sentence -> comment read PUNTO_Y_COMA
Rule 54    sentence -> while PUNTO_Y_COMA sentence
Rule 55    sentence -> comment while PUNTO_Y_COMA sentence
Rule 56    sentence -> while PUNTO_Y_COMA
Rule 57    sentence -> comment while PUNTO_Y_COMA
Rule 58    sentence -> for PUNTO_Y_COMA sentence
Rule 59    sentence -> comment for PUNTO_Y_COMA sentence
Rule 60    sentence -> for PUNTO_Y_COMA
Rule 61    sentence -> comment for PUNTO_Y_COMA
Rule 62    sentence -> if PUNTO_Y_COMA sentence
Rule 63    sentence -> comment if PUNTO_Y_COMA sentence
Rule 64    sentence -> if PUNTO_Y_COMA
Rule 65    sentence -> comment if PUNTO_Y_COMA
Rule 66    sentence -> case PUNTO_Y_COMA sentence
Rule 67    sentence -> comment case PUNTO_Y_COMA sentence
Rule 68    sentence -> case PUNTO_Y_COMA
Rule 69    sentence -> comment case PUNTO_Y_COMA
Rule 70    sentence -> repeat PUNTO_Y_COMA sentence
Rule 71    sentence -> comment repeat PUNTO_Y_COMA sentence
Rule 72    sentence -> repeat PUNTO_Y_COMA
Rule 73    sentence -> comment repeat PUNTO_Y_COMA
Rule 74    sentence -> assign PUNTO_Y_COMA sentence
Rule 75    sentence -> comment assign PUNTO_Y_COMA sentence
Rule 76    sentence -> assign PUNTO_Y_COMA
Rule 77    sentence -> comment assign PUNTO_Y_COMA
Rule 78    write -> ESCRIBIR PARENTESIS_IZQUIERDA string PARENTESIS_DERECHA PUNTO_Y_COMA
Rule 79    read -> LEER PARENTESIS_IZQUIERDA var PARENTESIS_DERECHA
Rule 80    while -> MIENTRAS condition HACER sentence FIN_MIENTRAS
Rule 81    for -> PARA PARENTESIS_IZQUIERDA IDENTIFICADOR ASIGNACION NUMERO_ENTERO PARENTESIS_DERECHA HASTA NUMERO_ENTERO COMA IDENTIFICADOR ASIGNACION IDENTIFICADOR SUMA NUMERO_ENTERO HACER sentence FIN_PARA
Rule 82    for -> PARA PARENTESIS_IZQUIERDA IDENTIFICADOR ASIGNACION NUMERO_ENTERO PARENTESIS_DERECHA HASTA NUMERO_ENTERO HACER sentence FIN_PARA
Rule 83    if -> SI condition ENTONCES sentence FIN_SI
Rule 84    if -> SI condition ENTONCES sentence SINO sentence FIN_SI
Rule 85    case -> SEGUN PARENTESIS_IZQUIERDA IDENTIFICADOR PARENTESIS_DERECHA HACER casesentence FIN_SEGUN
Rule 86    casesentence -> IGUAL NUMERO_ENTERO DOS_PUNTOS sentence PUNTO_Y_COMA casesentence
Rule 87    casesentence -> IGUAL NUMERO_ENTERO DOS_PUNTOS sentence PUNTO_Y_COMA
Rule 88    casesentence -> IGUAL NUMERO_ENTERO DOS_PUNTOS sentence PUNTO_Y_COMA default
Rule 89    casesentence -> IGUAL NUMERO_REAL DOS_PUNTOS sentence PUNTO_Y_COMA casesentence
Rule 90    casesentence -> IGUAL NUMERO_REAL DOS_PUNTOS sentence PUNTO_Y_COMA
Rule 91    casesentence -> IGUAL NUMERO_REAL DOS_PUNTOS sentence PUNTO_Y_COMA default
Rule 92    casesentence -> IGUAL IDENTIFICADOR DOS_PUNTOS sentence PUNTO_Y_COMA casesentence
Rule 93    casesentence -> IGUAL IDENTIFICADOR DOS_PUNTOS sentence PUNTO_Y_COMA
Rule 94    casesentence -> IGUAL IDENTIFICADOR DOS_PUNTOS sentence PUNTO_Y_COMA default
Rule 95    default -> SEGUN_DEFECTO DOS_PUNTOS sentence PUNTO_Y_COMA
Rule 96    repeat -> REPETIR sentence HASTA_QUE condition
Rule 97    assign -> IDENTIFICADOR ASIGNACION operation
Rule 98    assign -> IDENTIFICADOR ASIGNACION CADENA
Rule 99    operation -> PARENTESIS_IZQUIERDA operation PARENTESIS_DERECHA
Rule 100   operation -> operated aop operated aop operation
Rule 101   operation -> operated aop operated
Rule 102   operation -> operated
Rule 103   operated -> IDENTIFICADOR
Rule 104   operated -> NUMERO_REAL
Rule 105   operated -> NUMERO_ENTERO
Rule 106   arguments -> IDENTIFICADOR DOS_PUNTOS type COMA arguments
Rule 107   arguments -> IDENTIFICADOR DOS_PUNTOS type
Rule 108   string -> var COMA string
Rule 109   string -> var
Rule 110   string -> CADENA COMA string
Rule 111   string -> CADENA
Rule 112   var -> IDENTIFICADOR COMA var
Rule 113   var -> IDENTIFICADOR
Rule 114   condition -> PARENTESIS_IZQUIERDA IDENTIFICADOR rop IDENTIFICADOR PARENTESIS_DERECHA
Rule 115   condition -> NEGACION PARENTESIS_IZQUIERDA IDENTIFICADOR rop IDENTIFICADOR PARENTESIS_DERECHA
Rule 116   condition -> PARENTESIS_IZQUIERDA CADENA rop CADENA PARENTESIS_DERECHA
Rule 117   condition -> NEGACION PARENTESIS_IZQUIERDA CADENA rop CADENA PARENTESIS_DERECHA
Rule 118   condition -> PARENTESIS_IZQUIERDA NUMERO_ENTERO rop NUMERO_ENTERO PARENTESIS_DERECHA
Rule 119   condition -> NEGACION PARENTESIS_IZQUIERDA NUMERO_ENTERO rop NUMERO_ENTERO PARENTESIS_DERECHA
Rule 120   condition -> PARENTESIS_IZQUIERDA NUMERO_REAL rop NUMERO_REAL PARENTESIS_DERECHA
Rule 121   condition -> NEGACION PARENTESIS_IZQUIERDA NUMERO_REAL rop NUMERO_REAL PARENTESIS_DERECHA
Rule 122   condition -> condition lop condition
Rule 123   aop -> SUMA
Rule 124   aop -> RESTA
Rule 125   aop -> MULTIPLICACION
Rule 126   aop -> DIVISION
Rule 127   aop -> MODULO
Rule 128   aop -> DIVISION_ENTERA
Rule 129   aop -> POTENCIA
Rule 130   lop -> CONJUNCION
Rule 131   lop -> DISYUNCION
Rule 132   rop -> IGUAL
Rule 133   rop -> MAYOR
Rule 134   rop -> MENOR
Rule 135   rop -> MAYOR_IGUAL
Rule 136   rop -> MENOR_IGUAL
Rule 137   rop -> DISTINTO

Terminals, with rules where they appear

ACCION               : 2 3 4 5
AMBIENTE             : 11 12
ASIGNACION           : 81 81 82 97 98
CADENA               : 17 18 21 22 98 110 111 116 116 117 117
COMA                 : 81 106 108 110 112
COMENTARIO_BLOQUE    : 9
COMENTARIO_ENCABEZADO : 8
COMENTARIO_LINEA     : 10
CONJUNCION           : 130
DATO                 : 19 20 23 24 41
DISTINTO             : 137
DISYUNCION           : 131
DIVISION             : 126
DIVISION_ENTERA      : 128
DOS_PUNTOS           : 13 14 15 16 42 43 86 87 88 89 90 91 92 93 94 95 106 107
ENTONCES             : 83 84
ES                   : 2 3 4 5 42 43 44 45
ESCRIBIR             : 78
FIN_ACCION           : 2 3 4 5
FIN_FUNCION          : 42 43
FIN_MIENTRAS         : 80
FIN_PARA             : 81 82
FIN_PROCEDIMIENTO    : 44 45
FIN_SEGUN            : 85
FIN_SI               : 83 84
FUNCION              : 42 43
HACER                : 80 81 82 85
HASTA                : 81 82
HASTA_QUE            : 96
IDENTIFICADOR        : 2 3 4 5 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 42 43 81 81 81 82 85 92 93 94 97 98 103 106 107 112 113 114 114 115 115
IGUAL                : 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 86 87 88 89 90 91 92 93 94 132
LEER                 : 79
MAYOR                : 133
MAYOR_IGUAL          : 135
MENOR                : 134
MENOR_IGUAL          : 136
MIENTRAS             : 80
MODULO               : 127
MULTIPLICACION       : 125
NEGACION             : 115 117 119 121
NUMERO_ENTERO        : 25 26 27 28 81 81 81 82 82 86 87 88 105 118 118 119 119
NUMERO_REAL          : 29 30 31 32 89 90 91 104 120 120 121 121
PARA                 : 81 82
PARENTESIS_DERECHA   : 42 43 44 45 78 79 81 82 85 99 114 115 116 117 118 119 120 121
PARENTESIS_IZQUIERDA : 42 43 44 45 78 79 81 82 85 99 114 115 116 117 118 119 120 121
POTENCIA             : 129
PROCEDIMIENTO        : 44 45
PROCESO              : 6 7
PUNTO_Y_COMA         : 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 86 87 88 89 90 91 92 93 94 95
REPETIR              : 96
RESTA                : 124
SALTO_DE_LINEA       : 
SEGUN                : 85
SEGUN_DEFECTO        : 95
SI                   : 83 84
SINO                 : 84
SUMA                 : 81 123
error                : 

Nonterminals, with rules where they appear

aop                  : 100 100 101
arguments            : 42 43 44 45 106
assign               : 74 75 76 77
case                 : 66 67 68 69
casesentence         : 85 86 89 92
comment              : 3 5 14 16 18 20 22 24 26 28 30 32 34 36 38 40 47 49 51 53 55 57 59 61 63 65 67 69 71 73 75 77
condition            : 80 83 84 96 122 122
default              : 88 91 94
environment          : 2 3 42 44
environmentsentence  : 11 13 14 17 18 19 20 25 26 29 30 33 34 37 38
for                  : 58 59 60 61
function             : 33 34 35 36
if                   : 62 63 64 65
lop                  : 122
operated             : 100 100 101 101 102
operation            : 97 99 100
procedure            : 37 38 39 40
process              : 2 3 4 5 42 43 44 45
program              : 1
read                 : 50 51 52 53
repeat               : 70 71 72 73
rop                  : 114 115 116 117 118 119 120 121
sentence             : 6 46 47 50 51 54 55 58 59 62 63 66 67 70 71 74 75 80 81 82 83 84 84 86 87 88 89 90 91 92 93 94 95 96
sigma                : 0
string               : 78 108 110
type                 : 13 14 15 16 42 43 106 107
var                  : 79 108 109 112
while                : 54 55 56 57
write                : 46 47 48 49

Parsing method: SLR

state 0

    (0) S' -> . sigma
    (1) sigma -> . program
    (2) program -> . ACCION IDENTIFICADOR ES environment process FIN_ACCION
    (3) program -> . comment ACCION IDENTIFICADOR ES environment process FIN_ACCION
    (4) program -> . ACCION IDENTIFICADOR ES process FIN_ACCION
    (5) program -> . comment ACCION IDENTIFICADOR ES process FIN_ACCION
    (8) comment -> . COMENTARIO_ENCABEZADO
    (9) comment -> . COMENTARIO_BLOQUE
    (10) comment -> . COMENTARIO_LINEA

    ACCION          shift and go to state 3
    COMENTARIO_ENCABEZADO shift and go to state 5
    COMENTARIO_BLOQUE shift and go to state 6
    COMENTARIO_LINEA shift and go to state 7

    sigma                          shift and go to state 1
    program                        shift and go to state 2
    comment                        shift and go to state 4

state 1

    (0) S' -> sigma .



state 2

    (1) sigma -> program .

    $end            reduce using rule 1 (sigma -> program .)


state 3

    (2) program -> ACCION . IDENTIFICADOR ES environment process FIN_ACCION
    (4) program -> ACCION . IDENTIFICADOR ES process FIN_ACCION

    IDENTIFICADOR   shift and go to state 8


state 4

    (3) program -> comment . ACCION IDENTIFICADOR ES environment process FIN_ACCION
    (5) program -> comment . ACCION IDENTIFICADOR ES process FIN_ACCION

    ACCION          shift and go to state 9


state 5

    (8) comment -> COMENTARIO_ENCABEZADO .

    ACCION          reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)
    IDENTIFICADOR   reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)
    FUNCION         reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)
    PROCEDIMIENTO   reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)
    ESCRIBIR        reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)
    LEER            reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)
    MIENTRAS        reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)
    PARA            reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)
    SI              reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)
    SEGUN           reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)
    REPETIR         reduce using rule 8 (comment -> COMENTARIO_ENCABEZADO .)


state 6

    (9) comment -> COMENTARIO_BLOQUE .

    ACCION          reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)
    IDENTIFICADOR   reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)
    FUNCION         reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)
    PROCEDIMIENTO   reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)
    ESCRIBIR        reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)
    LEER            reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)
    MIENTRAS        reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)
    PARA            reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)
    SI              reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)
    SEGUN           reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)
    REPETIR         reduce using rule 9 (comment -> COMENTARIO_BLOQUE .)


state 7

    (10) comment -> COMENTARIO_LINEA .

    ACCION          reduce using rule 10 (comment -> COMENTARIO_LINEA .)
    IDENTIFICADOR   reduce using rule 10 (comment -> COMENTARIO_LINEA .)
    FUNCION         reduce using rule 10 (comment -> COMENTARIO_LINEA .)
    PROCEDIMIENTO   reduce using rule 10 (comment -> COMENTARIO_LINEA .)
    ESCRIBIR        reduce using rule 10 (comment -> COMENTARIO_LINEA .)
    LEER            reduce using rule 10 (comment -> COMENTARIO_LINEA .)
